hphp/test/slow/compilation/1238.php.expectf
Fatal error: A semicolon (';') is expected here. in %s/test/slow/compilation/1238.php on line 3